v3x: setup common kernel Image for all v3x target and  install all dtb files

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
@@ -1,5 +1,7 @@
 CONFIG_ARCH_R8A77970=y
+CONFIG_ARCH_R8A77980=y
 CONFIG_CAN=y
+CONFIG_CAN_PEAK_USB=y
 CONFIG_CAN_BCM=y
 CONFIG_CAN_RAW=y
 CONFIG_CAN_DEV=y
@@ -8,10 +10,13 @@ CONFIG_CAN_RCAR=y
 CONFIG_CAN_RCAR_CANFD=y
 CONFIG_DUMMY=y
 CONFIG_DRM_I2C_ADV7511=y
+CONFIG_GPIO_MAX732X=y
+CONFIG_GPIO_MAX732X_IRQ=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_MAX9286=y
+CONFIG_VIDEO_UB9X4=y
 CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_UINPUT=y
@@ -19,6 +24,13 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_SERIAL_SH_SCI_DMA=y
 CONFIG_UIO=y
+CONFIG_UIO_PDRV_GENIRQ=m
+CONFIG_SPI_SLAVE=y
+CONFIG_SPI_SLAVE_TIME=y
+CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
+CONFIG_SENSORS_LM63=y
+CONFIG_SH_ETH=y
+CONFIG_SATA_ACARD_AHCI=y
 CONFIG_MFD_DA9063=y
 CONFIG_INPUT_DA9063_ONKEY=y
 CONFIG_DA9063_WATCHDOG=y
@@ -26,3 +38,6 @@ CONFIG_REGULATOR_DA9063=y
 CONFIG_RCAR_THERMAL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
+CONFIG_MCP4725=y
+CONFIG_PHY_RCAR_GEN3_PCIE=y
+CONFIG_REGULATOR_MAX2008X=y
