--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
@@ -1,3 +1,4 @@
+CONFIG_ARCH_R8A77970=y
 CONFIG_ARCH_R8A77980=y
 CONFIG_CAN=y
 CONFIG_CAN_PEAK_USB=y
@@ -32,6 +33,11 @@ CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 CONFIG_SENSORS_LM63=y
 CONFIG_SH_ETH=y
 CONFIG_SATA_ACARD_AHCI=y
+CONFIG_MFD_DA9063=y
+CONFIG_INPUT_DA9063_ONKEY=y
+CONFIG_DA9063_WATCHDOG=y
+CONFIG_REGULATOR_DA9063=y
+CONFIG_RCAR_THERMAL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
