bsp_version.conf: Bump versions

--- a/meta-rcar-gen3-adas/conf/bsp_version.conf
+++ b/meta-rcar-gen3-adas/conf/bsp_version.conf
@@ -1,5 +1,5 @@
 # Original Renesas BSP version
-BSP_RENESAS_VERSION = "Renesas-Yocto-v3.21.0"
+BSP_RENESAS_VERSION = "Renesas-Yocto-v4.1.0"
 
 # V3x BSP Release
-BSP_RELEASE_VERSION = "v6.0.0"
+BSP_RELEASE_VERSION = "v7.0.0-rc1"
