V3x: Enable VIN/CSI and VSPD/DU/LVDS as Linux drivers  by default

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
@@ -41,9 +41,9 @@ CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
 CONFIG_REGULATOR_MAX2008X=y
-CONFIG_VIDEO_RCAR_CSI2=m
-CONFIG_VIDEO_RCAR_VIN=m
-CONFIG_VIDEO_RENESAS_VSP1=m
-CONFIG_DRM_RCAR_DU=m
-CONFIG_DRM_RCAR_LVDS=m
+CONFIG_VIDEO_RCAR_CSI2=y
+CONFIG_VIDEO_RCAR_VIN=y
+CONFIG_VIDEO_RENESAS_VSP1=y
+CONFIG_DRM_RCAR_DU=y
+CONFIG_DRM_RCAR_LVDS=y
 CONFIG_PID_IN_CONTEXTIDR=y
