ulcb: enable DRM_PANEL embedded in kernel

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -80,3 +80,5 @@ CONFIG_MD_RAID0=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_USB_TUSB8041=y
 CONFIG_REGULATOR_MAX2008X=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_DRM_PANEL_LVDS=y
