--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -14,8 +14,8 @@ BBFILE_PRIORITY_rcar-gen3-adas = "7"
 LAYERSERIES_COMPAT_rcar-gen3-adas = "zeus"
 
 # Distro features needed for all boards
-DISTRO_FEATURES_remove = "x11"
-DISTRO_FEATURES_append = " surroundview opencv-sdk"
+# DISTRO_FEATURES_remove = "x11"
+# DISTRO_FEATURES_append = " surroundview opencv-sdk"
 
 # Distro features needed for non V3x only (default)
 VAR_FEATURES = "bluetooth pulseaudio"
@@ -24,7 +24,7 @@ VAR_FEATURES_rcar-gen3-v3x = ""
 DISTRO_FEATURES_append = " ${VAR_FEATURES}"
 
 # Is it still needed with x11 feature removed?
-IMAGE_INSTALL_remove = " gtk+3-demo clutter-1.0-examples libx11-locale"
+# IMAGE_INSTALL_remove = " gtk+3-demo clutter-1.0-examples libx11-locale"
 
 # For e2studio
 EXTRA_IMAGE_FEATURES_append = " eclipse-debug"
