--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -10,6 +10,7 @@ CONFIG_CAN_MCP251X=y
 CONFIG_DUMMY=y
 CONFIG_EXTRA_FIRMWARE="r8a779x_usb3_v2.dlmem r8a779x_usb3_v3.dlmem"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+# CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_SATA_ACARD_AHCI=y
 CONFIG_FIXED_PHY=y
 CONFIG_SPI_BITBANG=y
