recipes-kernel: linux-renesas: ulcb.cfg: Update MOST configuration
This uses the latest kernel MOST configuration variables.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -63,12 +63,11 @@ CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_SERIAL_SH_SCI_DMA=y
 CONFIG_STAGING=y
 CONFIG_MOST=y
-CONFIG_MOSTCORE=y
-CONFIG_AIM_CDEV=y
-CONFIG_AIM_NETWORK=y
-CONFIG_AIM_SOUND=y
-CONFIG_AIM_V4L2=y
-CONFIG_HDM_DIM2=y
+CONFIG_MOST_CDEV=y
+CONFIG_MOST_NET=y
+CONFIG_MOST_SOUND=y
+CONFIG_MOST_VIDEO=y
+CONFIG_MOST_DIM2=y
 CONFIG_UIO=y
 CONFIG_SENSORS_EMC2103=y
 CONFIG_PMBUS=y
