--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -15,6 +15,8 @@ CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_MAX9286=y
+CONFIG_VIDEO_MAX9296=y
+CONFIG_VIDEO_MAX96712=y
 CONFIG_VIDEO_UB9X4=y
 CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_INPUT_TOUCHSCREEN=y
