--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -26,6 +26,7 @@ CONFIG_VIDEO_MAX96712=y
 CONFIG_VIDEO_UB9X4=y
 CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_VIDEO_OV5642=y
+CONFIG_VIDEO_OV5647=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
