recipes-kernel: linux-renesas: Add IMX219 camera support
This adds Raspberry Pi IMX219 camera support to Kingfisher.
The camera is available in the ulcb-kf-imx219.dtbo overlay.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -27,6 +27,7 @@ CONFIG_VIDEO_UB9X4=y
 CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_VIDEO_OV5642=y
 CONFIG_VIDEO_OV5647=y
+CONFIG_VIDEO_IMX219=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
