conf: layer.conf: Set hostname to v3x on v3x rootfs
Use common "v3x" hostname on all v3x rootfs images.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -37,3 +37,5 @@ EXTRA_IMAGE_FEATURES_append = " \
     package-management \
     ssh-server-openssh \
 "
+
+hostname_pn-base-files_rcar-gen3-v3x = "v3x"
