Introduce and use "bsp-pkgs" distro feature
This introduces "bsp-pkgs" DISTRO_FEATURE which is enabled by default.
The feature enables packagegroup-bsp in the weston and minimal images.
The packagegroup-bsp inclides all BSP-related packages.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -26,6 +26,9 @@ DISTRO_FEATURES_append = " ${VAR_FEATURES}"
 # Is it still needed with x11 feature removed?
 IMAGE_INSTALL_remove_rcar-gen3-v3x = " gtk+3-demo clutter-1.0-examples libx11-locale"
 
+# ADAS BSP packages
+DISTRO_FEATURES_append = " bsp-pkgs"
+
 # For e2studio
 EXTRA_IMAGE_FEATURES_append = " eclipse-debug"
 # Extra image features rquested by Renesas
