conf: layer.conf: Disable Weston-related features
This disables surroundview feature for non-V3x configurations.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -15,7 +15,7 @@ LAYERSERIES_COMPAT_rcar-gen3-adas = "dunfell"
 
 # Distro features needed for all boards
 DISTRO_FEATURES_remove = "x11"
-DISTRO_FEATURES_append = " surroundview opencv-sdk"
+DISTRO_FEATURES_append_rcar-gen3-v3x = " surroundview opencv-sdk"
 
 # Distro features needed for non V3x only (default)
 VAR_FEATURES = "bluetooth pulseaudio"
