--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -28,13 +28,11 @@ CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_VIDEO_OV5642=y
 CONFIG_VIDEO_OV5647=y
 CONFIG_VIDEO_IMX219=y
-CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_HIDP=m
 CONFIG_TI_ST=m
-CONFIG_BT_WILINK=m
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_CFG80211_WEXT=y
@@ -59,13 +57,28 @@ CONFIG_IIO_KFIFO_BUF=y
 CONFIG_IIO_TRIGGERED_BUFFER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
-CONFIG_LSM9DS0=m
+CONFIG_IIO_ST_ACCEL_3AXIS=m
+CONFIG_IIO_ST_ACCEL_I2C_3AXIS=m
+CONFIG_IIO_ST_ACCEL_SPI_3AXIS=m
+CONFIG_IIO_ST_SENSORS_I2C=m
+CONFIG_IIO_ST_SENSORS_SPI=m
+CONFIG_IIO_ST_SENSORS_CORE=m
+CONFIG_IIO_ST_GYRO_3AXIS=m
+CONFIG_IIO_ST_GYRO_I2C_3AXIS=m
+CONFIG_IIO_ST_GYRO_SPI_3AXIS=m
+CONFIG_IIO_ST_LSM9DS0=m
+CONFIG_IIO_ST_LSM9DS0_I2C=m
+CONFIG_IIO_ST_LSM9DS0_SPI=m
+CONFIG_IIO_ST_MAGN_3AXIS=m
+CONFIG_IIO_ST_MAGN_I2C_3AXIS=m
+CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_SERIAL_SH_SCI_DMA=y
 CONFIG_STAGING=y
 CONFIG_MOST=y
 CONFIG_MOST_CDEV=y
+CONFIG_MOST_COMPONENTS=y
 CONFIG_MOST_NET=y
 CONFIG_MOST_SOUND=y
 CONFIG_MOST_VIDEO=y
@@ -74,13 +87,11 @@ CONFIG_UIO=y
 CONFIG_SENSORS_EMC2103=y
 CONFIG_PMBUS=y
 CONFIG_RTC_DRV_DS1307=y
-CONFIG_RTC_DRV_DS1307_HWMON=y
 CONFIG_SENSORS_LM63=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_MD=y
 CONFIG_MD_RAID0=y
 CONFIG_GPIO_SYSFS=y
-CONFIG_USB_TUSB8041=y
 CONFIG_REGULATOR_MAX2008X=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_DRM_PANEL_LVDS=y
