meta-rcar-gen3-adas: conf: Update layer.conf
This updates layer conf for use on top of Renesas
meta-rcar-bsp and meta-rcar-adas layers.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILES += " \
 
 BBFILE_COLLECTIONS += "rcar-gen3-adas"
 BBFILE_PATTERN_rcar-gen3-adas := "^${LAYERDIR}/"
-BBFILE_PRIORITY_rcar-gen3-adas = "7"
+BBFILE_PRIORITY_rcar-gen3-adas = "8"
 
 LAYERSERIES_COMPAT_rcar-gen3-adas = "dunfell"
 
@@ -37,6 +37,10 @@ EXTRA_IMAGE_FEATURES_append = " \
     package-management \
     ssh-server-openssh \
 "
+
+EXTRA_IMAGEDEPENDS_append = " arm-trusted-firmware"
+EXTRA_IMAGEDEPENDS_append_r8a77970 = " cr7-loader"
+EXTRA_IMAGEDEPENDS_append_r8a77980 = " cr7-loader"
 
 hostname_pn-base-files_rcar-gen3-v3x = "v3x"
 
