--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_COLLECTIONS += "rcar-gen3-adas"
 BBFILE_PATTERN_rcar-gen3-adas := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
-LAYERSERIES_COMPAT_rcar-gen3-adas = "dunfell"
+LAYERSERIES_COMPAT_rcar-gen3-adas = "kirkstone"
 
 # Distro features needed for all boards
 DISTRO_FEATURES_remove = "x11"
