--- a/meta-rcar-gen3-adas/conf/machine/v3msk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3msk.conf
@@ -17,7 +17,7 @@ USE_32BIT_MMP ?= "0"
 MACHINE_FEATURES = ""
 
 KERNEL_IMAGETYPE = "Image"
-IMAGE_FSTYPES_append = " tar.bz2 ext4"
+IMAGE_FSTYPES:append = " tar.bz2 ext4"
 
 SERIAL_CONSOLE = "115200 ttySC0"
 
@@ -40,4 +40,4 @@ UBOOT_MACHINE = "r8a77970_v3msk_defconfig"
 PREFERRED_VERSION_libdrm = "2.4.85"
 
 # Add variable to Build Configuration in build log
-BUILDCFG_VARS_append = " SOC_FAMILY"
+BUILDCFG_VARS:append = " SOC_FAMILY"
