--- a/meta-rcar-gen3-adas/docs/sample/conf/eagle/poky-gcc/bsp/local.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/eagle/poky-gcc/bsp/local.conf
@@ -227,8 +227,8 @@ BB_DISKMON_DIRS = "\
 # seen. The two lines below enable the SDL backend too. By default libsdl-native will
 # be built, if you want to use your host's libSDL instead of the minimal libsdl built
 # by libsdl-native then uncomment the ASSUME_PROVIDED line below.
-PACKAGECONFIG_append_pn-qemu-native = " sdl"
-PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+PACKAGECONFIG:append:pn-qemu-native = " sdl"
+PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
 #ASSUME_PROVIDED += "libsdl-native"
 
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
@@ -237,11 +237,11 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 # Add systemd configuration
-DISTRO_FEATURES_append = " systemd"
+DISTRO_FEATURES:append = " systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 
 # add the static lib to SDK toolchain
-SDKIMAGE_FEATURES_append = " staticdev-pkgs"
+SDKIMAGE_FEATURES:append = " staticdev-pkgs"
 
 # Disable optee in meta-linaro layer
 BBMASK = "meta-linaro/meta-optee/recipes-security/optee"
@@ -253,9 +253,9 @@ BBMASK .= "|kernel-module-uvcs-drv|omx-user-module"
 
 # Linux ICCOM driver (RCG3ZLIDL4101ZNO)
 # Linux ICCOM library (RCG3ZLILL4101ZNO)
-#DISTRO_FEATURES_append = " iccom"
+#DISTRO_FEATURES:append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-#MACHINE_FEATURES_append = " cas
+#MACHINE_FEATURES:append = " cas
 
-IMAGE_INSTALL_remove = "optee-linuxdriver optee-linuxdriver-armtz optee-client"
+IMAGE_INSTALL:remove = "optee-linuxdriver optee-linuxdriver-armtz optee-client"
