--- a/meta-rcar-gen3-adas/conf/machine/v3msk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3msk.conf
@@ -13,3 +13,9 @@ require conf/machine/include/v3x.inc
 require conf/machine/include/v3xsk.inc
 
 IMAGE_FSTYPES_remove = "wic.gz wic.bmap wic.gz.sha256sum wic.gz.crc"
+
+# Configuration for CR7 Loader
+EXTRA_IMAGEDEPENDS += " cr7-loader"
+
+# Configuration for ARM Trusted Firmware
+EXTRA_IMAGEDEPENDS += " arm-trusted-firmware"
